# repomap

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  BRANCHING.md  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  PUBLISHING.md  README.md  add_execute_permission.py  ast_parser.py  build_and_publish.sh  install_queries.py  io_utils.py  lint.sh  models.py  pyproject.toml  pytest.ini  queries  repomap.py  requirements.txt  run_coverage.sh  run_coverage_pytest.sh  run_filtered_tests.py  run_tests.py  setup.cfg  setup.py  setup_conda_env.sh
.design/: LARGE_REPO_HANDLING.md  README.md  conversion_summary.md  coverage_summary.md  fix_summary.md  test_infrastructure_status.md
.github/workflows/: ci.yml  publish.yml  python-ci.yml  test.yml
.repomap.tags.cache.v4/: cache.db
output/: .gitkeep
repomap/: __init__.py  __main__.py  api.py  ast_parser.py  models.py  repomap.py  section_splitting.py  splitting.py  utils.py
repomap/modules/: __init__.py  cache.py  config.py  core.py  file_utils.py  map_generator.py  models.py  parsers.py  symbol_extraction.py  visualization.py
repomap/output/: .gitkeep  repomap_RepoMap_part00001.txt  repomap_repo_part00001.txt
repomap/queries/: __init__.py
repomap/tests/: test_ast_parser.py  test_ast_parser_advanced.py  test_repomap.py
samples/mixed/: python-sample.py
scripts/: ast_parser.py  build_and_publish.sh  lint.sh  repomap.py  run_coverage.sh  run_coverage_pytest.sh  run_filtered_tests.py  setup_conda_env.sh
stubs/: tiktoken.pyi
tests/: conftest.py  test_api.py  test_ast_parser.py  test_ast_parser_advanced.py  test_cache.py  test_cli.py  test_code_elements.py  test_dump.py  test_install_queries.py  test_integration.py  test_io_utils_comprehensive.py  test_main_module.py  test_minimum_token_size.py  test_models_comprehensive.py  test_performance.py  test_repomap.py  test_repomap_comprehensive.py  test_repomap_generation.py  test_repomap_parser.py  test_repomap_splitting.py  test_section_splitting.py  test_section_splitting_comprehensive.py  test_special.py  test_token_splitting.py  test_utils.py  test_utils_comprehensive.py  test_whole_file_generation.py
tests/coverage/: class_index.html  function_index.html  index.html  status.json  z_84b183b69f460bbb___init___py.html  z_84b183b69f460bbb___main___py.html  z_84b183b69f460bbb_api_py.html  z_84b183b69f460bbb_dump_py.html  z_84b183b69f460bbb_install_queries_py.html  z_84b183b69f460bbb_io_utils_py.html  (+5 more)
tests/data/: test.js  (+1 more)
(+9 files in other folders)
