[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomap"
version = "0.1.2"
description = "A tool for mapping and visualizing code repositories"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "diskcache>=5.6.3",
    "pygments>=2.15.1",
    "tqdm>=4.67.1", 
    "networkx>=3.2.1",
    "importlib-resources>=6.0.0",
    "grep-ast>=0.1.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.6.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.0",
    "typer>=0.15.2",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/Emasoft/repomap"
Issues = "https://github.com/Emasoft/repomap/issues"

[project.scripts]
repomap = "repomap:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as slow",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.coverage.run]
source = ["repomap"]
omit = ["tests/*", "repomap/tests/*", "setup.py", ".design/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]